--- a/lcd-interfacing/Objects/display_on_lcd.build_log.htm
+++ b/lcd-interfacing/Objects/display_on_lcd.build_log.htm
@@ -18,16 +18,17 @@ Hex Converter:   OH51.exe V2.7.0.0
 CPU DLL:         
 Dialog DLL:       
 <h2>Project:</h2>
-C:\Users\demaa\Documents\Embedded-system-programming\traffic-light-system\traffic-light-system-embedded-c-program.uvproj
-Project File Date:  06/06/2023
+C:\Users\demaa\Documents\Embedded-system-programming\lcd-interfacing\display_on_lcd.uvproj
+Project File Date:  06/14/2023
 
 <h2>Output:</h2>
 Build target 'Target 1'
+compiling led.c...
 linking...
-Program Size: data=9.0 xdata=0 code=180
-creating hex file from ".\Objects\traffic-light-system-embedded-c-program"...
-".\Objects\traffic-light-system-embedded-c-program" - 0 Error(s), 0 Warning(s).
-Build Time Elapsed:  00:00:00
+Program Size: data=14.0 xdata=0 code=280
+creating hex file from ".\Objects\display_on_lcd"...
+".\Objects\display_on_lcd" - 0 Error(s), 0 Warning(s).
+Build Time Elapsed:  00:00:01
 </pre>
 </body>
 </html>
